# common

./: CMakeLists.txt
include/common/: define.hpp  enum.hpp  traits.hpp
include/common/enum/: detail.hpp
tests/: CMakeLists.txt  enum_test.cpp
